------------------------------------------------------------------------
Release:	ReiLua version 0.4.0		Using Raylib 4.2
------------------------------------------------------------------------
KEY CHANGES:
	- ADDED: This changelog.
	- ADDED: Lua interpreter mode.
	- ADDED: Easings extra module.

Detailed changes:
ADDED: Help argument.
CHANGED: Changed fuction name RL_rlSetLineWidth to RL_rlglSetLineWidth.
CHANGED: Changed fuction name RL_rlGetLineWidth to RL_rlglGetLineWidth.
FIX: DrawRectangleGradient V and H expecting wrong amount of arguments.